# ExileEngine

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml
Dependencies/: CMakeLists.txt
Documentation/API/: LuaClasses.md
Documentation/Runtime/: Filesystem.md
Include/Exile/ECS/: Component.hpp  Entity.hpp  EntityManager.hpp  README.md  System.hpp
Include/Exile/Reflect/: Compiler.hpp  EXIB.md  README.md  Reflection.hpp
Include/Exile/Reflect/Impl/: ClassRegistry.hpp  Invoke.hpp  Type.hpp
Include/Exile/Runtime/: API.hpp  Filesystem.hpp  Logger.hpp  Lua.hpp  LuaContext.hpp  LuaState.hpp  Path.hpp  Reflection.hpp
Include/Exile/Runtime/Lua/: LuaState.hpp
Include/Exile/Runtime/Reflection/: Class.hpp  Field.hpp  Method.hpp  Types.hpp
Include/Exile/TL/: ByteUtils.hpp  FreeMap.hpp  LRUCache.hpp  NumericMap.hpp  ObjectPool.hpp  README.md  Range.hpp  Type.hpp  UUID.hpp
Include/Exile/Unit/: Benchmark.hpp  README.md  Test.hpp
Source/: CMakeLists.txt
Source/ECS/: CMakeLists.txt  Component.cpp  Entity.cpp  EntityManager.cpp  System.cpp
Source/Reflect/: CMakeLists.txt  Class.cpp  ClassRegistry.cpp  Invoke.x86_64.S
Source/Runtime/: CMakeLists.txt  FileControl.cpp  FileHandle.cpp  Filesystem.cpp  Logger.cpp  LuaContext.cpp  Path.cpp
Source/Runtime/Filesystem/: FileControl.cpp  FileHandle.cpp  Filesystem.cpp  Path.cpp
Source/Runtime/Lua/: LuaContext.cpp  LuaState.cpp
Source/Runtime/Reflection/: Class.cpp  Field.cpp  Method.cpp
Tests/: CMakeLists.txt
Tests/ECS/: Benchmark.cpp  CMakeLists.txt  Test.cpp
Tests/Reflect/: Benchmark.cpp  Benchmark.hpp  CMakeLists.txt  Test.cpp
Tests/Runtime/: Benchmark.cpp  CMakeLists.txt  Test.cpp
Tests/TL/: Benchmark.cpp  CMakeLists.txt  Test.cpp
