add_executable(RuntimeTest Test.cpp Benchmark.cpp)
target_link_libraries(RuntimeTest ExileRuntime)

add_test(NAME "[Runtime] _ Runtime Benchmark _"         COMMAND RuntimeTest Benchmark)
add_test(NAME "[Runtime] LuaContext::ExecuteString"     COMMAND RuntimeTest LuaContext_ExecuteString)
add_test(NAME "[Runtime] LuaContext::SetGlobalFunction" COMMAND RuntimeTest LuaContext_SetGlobalFunction)
add_test(NAME "[Runtime] PathUtils::GetNextFragment"    COMMAND RuntimeTest PathUtils_GetNextFragment)
add_test(NAME "[Runtime] PathUtils::StripSeparators"    COMMAND RuntimeTest PathUtils_StripSeparators)
add_test(NAME "[Runtime] Path::Path"                    COMMAND RuntimeTest Path_Constructor)
add_test(NAME "[Runtime] Path::GetFile"                 COMMAND RuntimeTest Path_GetFile)
add_test(NAME "[Runtime] Path::GetFileName"             COMMAND RuntimeTest Path_GetFileName)
add_test(NAME "[Runtime] Path::GetExtension"            COMMAND RuntimeTest Path_GetExtension)
add_test(NAME "[Runtime] Filesystem::MountDirectory"    COMMAND RuntimeTest Filesystem_MountDirectory)
add_test(NAME "[Runtime] Filesystem::TranslatePath"     COMMAND RuntimeTest Filesystem_TranslatePath)
add_test(NAME "[Runtime] Filesystem::Open"              COMMAND RuntimeTest Filesystem_Open)
add_test(NAME "[Runtime] Filesystem::Open (Threads)"    COMMAND RuntimeTest Threaded_Filesystem_Open)
set_target_properties(RuntimeTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
